# DreamMeta

./: .gitignore  .mcp.json  CLAUDE.md  README.md  README.zh-CN.md  package-lock.json  package.json
Renovation/: M01.txt  M02.txt  M03.txt  M04.txt  M05.txt  M06.txt  M07.txt  M08.txt  M09.txt  M10.txt  M11.txt  M12.txt  M13.txt  总览图表.txt  术语表.txt  模板.txt
agents/: Bio-Optimizer-Agent.md  Governance-Evaluator-Agent.md  Governance-Improver-Agent.md  Governance-Verifier-Agent.md  Info-Extractor-Agent.md  MCP-Server-Builder-Agent.md  Meta-Instruction-Writer-Agent.md  Meta-Learner-Agent.md
dreammeta/: CLAUDE.md  PRD.md  projects.json  pyproject.toml  user_settings.json
dreammeta/.claude/data/: session_state.json
dreammeta/.claude/memory/areas/topics/api-design/: items.json
dreammeta/.claude/memory/areas/topics/general/: items.json
dreammeta/.claude/memory/areas/topics/nextjs/: items.json
dreammeta/.claude/memory/areas/topics/python/: items.json
dreammeta/.claude/memory/areas/topics/react/: items.json
dreammeta/.claude/memory/areas/topics/refactoring/: items.json
dreammeta/.claude/memory/areas/topics/testing/: items.json
dreammeta/.claude/memory/areas/topics/vue/: items.json
dreammeta/.claude/memory/memory/: 2026-03-16.md  2026-03-17.md
dreammeta/dreammeta/: __init__.py  __main__.py  app.py  config.py  constants.py  theme.py
dreammeta/dreammeta/data/: __init__.py  agent_parser.py  models.py  project_scanner.py
dreammeta/dreammeta/screens/: __init__.py  dashboard.py  projects.py  settings.py
dreammeta/tests/: __init__.py  test_smoke.py
(+52 files in other folders)
