[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dreammeta"
version = "0.4.0"
description = "梦元 — Meta-Department Desktop Dashboard"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "pydantic>=2.0",
]

[project.scripts]
dreammeta = "dreammeta.app:main"
